@@ -3,6 +3,8 @@ git-annex (0.22) UNRELEASED; urgency=low
   * Fix test suite to reap zombies.
     (Zombies can be particularly annoying on OSX; thanks to Jimmy Tang
     for his help eliminating the infestation... for now.)
+  * Make test suite not rely on a working cp -pr.
+    (The Unix wars are still ON!)
 
  -- Joey Hess <joeyh@debian.org>  Sun, 13 Feb 2011 00:48:02 -0400
 
